# lettuce

./: README.md
lettuce/: Dockerfile  README.md  client0_data.csv  client2_data.csv  domains_by_count.csv  pyproject.toml  requirements.txt  vocabulary_ids_by_count.csv
lettuce/FedLettuce/: cipher.py  client-encrypt.py  client.py  client_encrypt.py  config.py  debug_lettuce_output.py  extract_lettuce_results.py  extract_top5_vecsearch.py  gpu_checker.py  groundtruth_checking.py  llamagpu_checker.py  llm_groundtruth_checking.py  running_lettuce.py  sequential_client.py  server.py  server_decrypt.py  simulation.py  testing_cli.py  todolist.txt  trial.py
lettuce/FedLettuce/data/: EU_test_set.csv  data_partitioner.py
lettuce/FedLettuce/data/clientdata/: client0_data.csv  client1_data.csv  client2_data.csv  client3_data.csv  client4_data.csv  client5_data.csv  client6_data.csv  client7_data.csv  client8_data.csv  client9_data.csv
lettuce/FedLettuce/nonflower-attempts/: extract_llmanswer.py  extract_top5_vecsearch.py  groundtruth_checking.py  lettuce-cli-command.txt  nousellm-extract5copy.py  running_lettuce.py  todolist.txt
lettuce/components/: models.py  pipeline.py
lettuce/omop/: omop_models.py  omop_queries.py
lettuce/options/: base_options.py  pipeline_options.py
lettuce/ui/: launch.py  main.py
lettuce/ui/pages/: 1_Home.py  2_File_Upload.py  3_OMOP_Matching.py
